# haskelzinc

./: haskelzinc.cabal
src/Interfaces/: FZSolutionParser.hs  MZAST.hs  MZAuxiliary.hs  MZPrinter.hs  MZinHaskell.hs
