name:                haskelzinc

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.0.3
synopsis:            CP in Haskell through MiniZinc
description:
    This package was created in the context of the
    [GRACeFUL project](https://www.graceful-project.eu/).
    .
    The haskelzinc library defines an interface to the MiniZinc 2.0 constraint
    proramming language. It provides a Haskell abstract syntax tree for the
    MiniZinc language, with which one can represent MiniZinc models in Haskell,
    a pretty printer to print the representation of a MiniZinc model in MiniZinc
    and a parser that returns a representation of the solutions obtained by
    running the MiniZinc model.
    .
    An additional module gives the possibility to directly get the solutions of
    a MiniZinc finite domain model. Option for interactive interface is
    provided, as well as choice between two solvers: the G12/FD built-in solver
    of FlatZinc and choco3.
homepage:            https://github.com/GRACeFUL-project/haskelzinc

license:             BSD3
license-file:        LICENSE
author:              Klara Marntirosian
maintainer:          klara.mar@cs.kuleuven.be
stability:           provisional
-- copyright:
category:            Interfaces
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  changelog
                   , README.md
                   , test.hs

library
  exposed-modules:   Interfaces.MZPrinter
                   , Interfaces.MZinHaskell
                   , Interfaces.MZAST
                   , Interfaces.FZSolutionParser
                   , Interfaces.MZAuxiliary
  -- other-modules:
  other-extensions:  FlexibleInstances
  build-depends:     base >=4.8 && <5
                   , pretty
                   , process
                   , filepath >=1.2
                   , parsec3 >=1.0.0.8
                   , containers >=0.5 && <0.6
  hs-source-dirs:    src
  default-language:  Haskell2010

source-repository head
  type:              git
  location:          https://github.com/GRACeFUL-project/haskelzinc.git
